generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum userRole {
  ADMIN
  CASHIER
}

model User {
  id           String        @id @default(cuid())
  name         String
  email        String        @unique
  password     String        @map("password")
  role         userRole      @default(CASHIER)
  createdAt    DateTime      @default(now()) @map("created_at")
  transactions Transaction[] // Relasi ke transaksi yang dibuat oleh user ini

  @@index([email])
  @@map("users")
}

model Category {
  id        Int      @id @default(autoincrement())
  name      String   @unique
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  menus     Menu[] // Relasi ke menu-menu di kategori ini

  @@map("categories")
}

model Menu {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  stock       Int      @default(0)
  price       Float
  categoryId  Int      @map("category_id")
  imageUrl    String?  @map("image_url")
  isActive    Boolean  @default(true) @map("is_active")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  category         Category          @relation(fields: [categoryId], references: [id])
  transactionItems TransactionItem[]

  @@map("menus")
}

model Transaction {
  id                String   @id @default(cuid())
  totalAmount       Float    @map("total_amount")
  paymentMethod     String   @map("payment_method")
  status            String
  transactionDate   DateTime @default(now()) @map("transaction_date")
  userId            String   @map("user_id")
  user              User     @relation(fields: [userId], references: [id])
  paymentGatewayId  String?  @unique @map("payment_gateway_id")
  paymentGatewayUrl String?  @map("payment_gateway_url")

  items TransactionItem[]

  @@map("transactions")
}

model TransactionItem {
  id            String      @id @default(cuid())
  quantity      Int
  itemTotal     Float       @map("item_total")
  transactionId String      @map("transaction_id")
  menuId        String      @map("menu_id")
  transaction   Transaction @relation(fields: [transactionId], references: [id])
  menu          Menu        @relation(fields: [menuId], references: [id])

  @@map("transaction_items")
}
